--- a/src/index.css
+++ b/src/index.css
@@ -136,3 +136,43 @@
   [data-scope="carousel"][data-part="indicator"] {
   }
 }
+
+/* Checkbox */
+@layer components {
+  [data-scope="checkbox"][data-part="root"] {
+    @apply flex items-center gap-3;
+  }
+
+  [data-scope="checkbox"][data-part="root"][data-disabled] {
+    @apply opacity-50 cursor-not-allowed;
+  }
+
+  [data-scope="checkbox"][data-part="root"][data-focus]
+    > [data-scope="checkbox"][data-part="control"] {
+    @apply ring-2 ring-primary ring-offset-2;
+  }
+
+  [data-scope="checkbox"][data-part="control"] {
+    @apply border size-5 rounded-sm grid place-items-center;
+  }
+
+  [data-scope="checkbox"][data-part="control"][data-focus] {
+    @apply ring-offset-2 ring-ring  ring-offset-background;
+  }
+
+  [data-scope="checkbox"][data-part="control"][data-state="checked"] {
+    @apply text-primary-foreground bg-primary;
+  }
+
+  [data-scope="checkbox"][data-part="control"][data-state="indeterminate"] {
+    @apply text-primary-foreground bg-primary;
+  }
+
+  [data-scope="checkbox"][data-part="indicator"] {
+    @apply [&>svg]:size-4 text-current;
+  }
+
+  [data-scope="checkbox"][data-part="label"] {
+    @apply text-sm font-semibold;
+  }
+}
