--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url("./components/accordion/accordion.css");
+@import url("./components/avatar/avatar.css");
+@import url("./components/checkbox/checkbox.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -67,116 +71,5 @@
     --ring: 216 34% 17%;
 
     --radius: 0.5rem;
-  }
-}
-
-/* Accordion */
-@layer components {
-  [data-scope="accordion"][data-part="item"] {
-    @apply border-b grid;
-  }
-
-  [data-scope="accordion"][data-part="item-content"] {
-    @apply overflow-hidden text-sm transition-all px-3;
-  }
-
-  [data-scope="accordion"][data-part="item-content"][data-state="open"] {
-    @apply animate-accordion-down;
-  }
-
-  [data-scope="accordion"][data-part="item-content"][data-state="closed"] {
-    @apply animate-accordion-up;
-  }
-
-  [data-scope="accordion"][data-part="item-trigger"] {
-    @apply flex items-center justify-between p-3 hover:underline font-semibold;
-  }
-
-  [data-scope="accordion"][data-part="item-indicator"] {
-    @apply transition-transform duration-200;
-  }
-
-  [data-scope="accordion"][data-part="item-indicator"][data-state="open"] {
-    @apply rotate-180 transition-all;
-  }
-}
-
-/* Avatar */
-@layer components {
-  [data-scope="avatar"][data-part="root"] {
-    @apply grid size-10 rounded-full overflow-hidden;
-  }
-
-  [data-scope="avatar"][data-part="fallback"] {
-    @apply col-span-full row-span-full grid place-items-center border rounded-full bg-muted;
-  }
-
-  [data-scope="avatar"][data-part="image"] {
-    @apply col-span-full row-span-full;
-  }
-}
-
-/* Carousel */
-@layer components {
-  [data-scope="carousel"][data-part="root"] {
-  }
-
-  [data-scope="carousel"][data-part="prev-trigger"] {
-  }
-
-  [data-scope="carousel"][data-part="item"] {
-  }
-
-  [data-scope="carousel"][data-part="next-trigger"] {
-  }
-
-  [data-scope="carousel"][data-part="indicator-group"] {
-  }
-
-  [data-scope="carousel"][data-part="indicator"] {
-  }
-}
-
-/* Checkbox */
-@layer components {
-  [data-scope="checkbox"][data-part="root"] {
-    @apply flex items-center gap-3;
-  }
-
-  [data-scope="checkbox"][data-part="root"][data-disabled] {
-    @apply opacity-50 cursor-not-allowed;
-  }
-
-  [data-scope="checkbox"][data-part="root"][data-focus]
-    > [data-scope="checkbox"][data-part="control"] {
-    @apply ring-2 ring-primary ring-offset-2;
-  }
-
-  [data-scope="checkbox"][data-part="control"] {
-    @apply border size-5 rounded-sm grid place-items-center;
-  }
-
-  [data-scope="checkbox"][data-part="control"][data-hover] {
-    @apply cursor-pointer;
-  }
-
-  [data-scope="checkbox"][data-part="control"][data-focus] {
-    @apply ring-offset-2 ring-ring  ring-offset-background;
-  }
-
-  [data-scope="checkbox"][data-part="control"][data-state="checked"] {
-    @apply text-primary-foreground bg-primary;
-  }
-
-  [data-scope="checkbox"][data-part="control"][data-state="indeterminate"] {
-    @apply text-primary-foreground bg-primary;
-  }
-
-  [data-scope="checkbox"][data-part="indicator"] {
-    @apply [&>svg]:size-4 text-current;
-  }
-
-  [data-scope="checkbox"][data-part="label"] {
-    @apply text-sm font-semibold;
   }
 }
