--- a/src/components/avatar/avatar.css
+++ b/src/components/avatar/avatar.css
@@ -1,13 +1,17 @@
 @layer components {
   [data-scope="avatar"][data-part="root"] {
-    @apply grid size-10 rounded-full overflow-hidden;
+    @apply size-10 rounded-full overflow-hidden;
   }
 
-  [data-scope="avatar"][data-part="fallback"] {
-    @apply col-span-full row-span-full grid place-items-center border rounded-full bg-muted;
+  [data-scope="avatar"][data-part="fallback"][data-state="visible"] {
+    @apply grid place-items-center size-full bg-muted border rounded-full;
   }
 
-  [data-scope="avatar"][data-part="image"] {
-    @apply col-span-full row-span-full;
+  [data-scope="avatar"][data-part="fallback"][data-state="hidden"] {
+    @apply hidden;
+  }
+
+  [data-scope="avatar"][data-part="image"][data-state="hidden"] {
+    @apply hidden;
   }
 }
