--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("./components/accordion/accordion.css");
 @import url("./components/avatar/avatar.css");
 @import url("./components/checkbox/checkbox.css");
+@import url("./components/combobox/combobox.css");
 
 @tailwind base;
 @tailwind components;
