--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @import url("./components/checkbox/checkbox.css");
 @import url("./components/combobox/combobox.css");
 @import url("./components/dialog/dialog.css");
+@import url("./components/field/field.css");
+@import url("./components/input/input.css");
 
 @tailwind base;
 @tailwind components;
